Add conditional for display pic

--- a/app/views/shared/_home_nav.html.erb
+++ b/app/views/shared/_home_nav.html.erb
@@ -1,7 +1,11 @@
 <div class="panel">
   <div class="row">
     <div class="small-4 columns home-nav-box">
-      <a href="#"><img class="home-nav-pic" src="http://placehold.it/300x300&text=[img]" /></a>
+      <% if current_user.avatar.present? %>
+        <%= image_tag(current_user.avatar.main, id: "profile-pic", :class => "home-nav-pic") %>
+      <% else %>
+        <%= image_tag("http://placehold.it/300x300&text=[img]", id: "profile-pic", :class => "home-nav-pic") %>
+      <% end %>
     </div>
     <div class="small-8 columns home-nav-name">
       <p><%= current_user.full_name %></p>
