--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="row">
       <div class="small-12 medium-6 columns">
-        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :multipart => true }) do |f| %>
           <%= devise_error_messages! %>
 
           <%= f.label :firstname, "First name" %>
@@ -23,6 +23,15 @@
 
           <%= f.label :email %>
           <%= f.email_field :email %>
+
+          <% if current_user.avatar.url.present? %>
+            <%= image_tag(current_user.avatar.url)  %>
+            <%= f.label :remove_avatar %>
+            <%= f.check_box :remove_avatar  %>
+          <% else %>
+            <%= f.file_field :avatar %>
+            <%= f.hidden_field :avatar_cache %>
+          <% end %>
 
           <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
             <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
