Style offer block and preview pic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,6 +150,14 @@
   }
 }
 
+.preview-pic-row {
+  margin-bottom: 15px;
+}
+
+.offer-block {
+  padding-bottom: 10px;
+}
+
 #notice {
   color: green;
 }
