Add bottom padding for thumbs

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="small-12 columns">
+      <div class="small-12 columns preview-pic-row">
         <ul class="clearing-thumbs" data-clearing>
         <% @listing.pics.each do |pic| %>
           <li>
