--- a/app/views/offers/_seen_listing_offer.html.erb
+++ b/app/views/offers/_seen_listing_offer.html.erb
@@ -5,7 +5,7 @@
     <%= link_to image_tag(listing.thumb_image, :class => "th"), listing_path(listing) %>
   <% end %>
 </div>
-<div class="small-9 medium-10 columns">
+<div class="small-9 medium-10 columns offer-block">
   <p class="message-name"><%= listing.headline %></p>
   <div class="row">
     <div class="small-12 columns">
