Add style for no listing message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,10 @@
   margin-top: 20px;
 }
 
+.no-listing-message-margin {
+  margin-bottom: 15px;
+}
+
 .product-search-button {
   padding-right: 5px;
   padding-left: 5px;
