Format modal message

--- a/app/views/shared/_pricing_table.html.erb
+++ b/app/views/shared/_pricing_table.html.erb
@@ -11,7 +11,8 @@
   <% unless current_user_listing? %>
     <div id="interestedModal" class="reveal-modal" data-reveal>
       <%= form_tag inquiries_path(@listing) do %>
-        <h2>Like it? Let them know your interested!</h2>
+        <h3>Like it?</h3>
+        <h3>Let them know you're interested!</h3>
         <div class="row">
           <div class="small-12 medium-8 large-6 columns">
             <p class="lead">Add a message</p>
