--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="small-12 medium-5 large-4 columns hide-for-small">
-  <%= render partial: "shared/home_nav" %>
+  <div class="small-12 medium-5 large-4 columns">
+    <%= render partial: "shared/home_nav" %>
   </div>
   <div class="small-12 medium-7 large-8 columns">
     <div class="row">
