--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 medium-5 large-4 columns">
+  <div class="small-12 medium-4 columns">
     <%= render partial: "shared/home_nav" %>
   </div>
   <div class="small-12 medium-7 large-8 columns">
