Reflow interchange after ajax filter/sort

--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -16,6 +16,9 @@ $(function(){
         sort: sortValue,
         distance_filter: distanceValue
       },
+    }).done(function(){
+       $(document).foundation('interchange', 'reflow');
+       $(document).foundation('interchange', 'resize');
     });
   }
   $('#marketplace-search-button').on('click', searchFliterSort);
