--- a/app/views/application/_mobile_home_links.html.erb
+++ b/app/views/application/_mobile_home_links.html.erb
@@ -5,18 +5,18 @@
   <%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, listings_path %>
 </li>
 <li class="hide-for-medium-up has-dropdown">
-  <%= link_to "<i class='fi-mail'></i> Messages".html_safe, messages_path %>
+  <%= link_to "<i class='fi-burst-sale #{'notification' if new_offers?}'></i> Offers".html_safe, offers_path %>
+  <ul class="dropdown">
+    <li><%= link_to "Received", offers_path %></li>
+    <li><%= link_to "Sent", sent_offers_path %></li>
+  </ul>
+</li>
+<li class="hide-for-medium-up has-dropdown">
+  <%= link_to "<i class='fi-mail #{'notification' if new_messages?}'></i> Messages".html_safe, messages_path %>
   <ul class="dropdown">
     <li><%= link_to "Inbox", messages_path %></li>
     <li><%= link_to "Sent", sent_path %></li>
     <li><%= link_to "Trash", trash_path %></li>
-  </ul>
-</li>
-<li class="hide-for-medium-up has-dropdown">
-  <%= link_to "<i class='fi-burst-sale'></i> Offers".html_safe, offers_path %>
-  <ul class="dropdown">
-    <li><%= link_to "Received", offers_path %></li>
-    <li><%= link_to "Sent", sent_offers_path %></li>
   </ul>
 </li>
 <li class="hide-for-medium-up">
