--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
-  <div class="small-12 medium-5 large-4 columns">
+  <div class="small-12 medium-4 columns">
+    <%= render partial: "shared/home_nav" %>
+  </div>
+  <div class="small-12 medium-8 columns">
     <% if @listing.listing_images.empty? %>
       <img src="http://placehold.it/610x610&text=[img]">
     <% else %>
       <%= image_tag(@listing.main_image) %>
     <% end %>
     <%= render partial: "shared/pricing_table" %>
-  </div>
-  <div class="small-12 medium-7 large-8 columns">
+
     <div class="row">
       <div class="small-12 columns panel">
         <h4>New Offers!</h4>
