Add styles for buttons on home listings

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,15 @@
   background-color: #246020;
 }
 
+.home-listing-button {
+  margin-bottom: 0;
+}
+
+.remove-button {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+}
+
 .listing-list-panel {
   padding: 10px;
 }
