--- a/app/views/users/_home_listing.html.erb
+++ b/app/views/users/_home_listing.html.erb
@@ -7,17 +7,17 @@
     <% end %>
   </div>
   <div class="small-9 medium-10 columns left no-padding">
-    <div class="small-9 columns">
+    <div class="small-8 columns">
       <p class="message-name">
         <%= link_to truncate(listing.headline, length: 30), listing_path(listing) %>
       </p>
       <p>Category: <%= listing.category.name %></p>
       <p>Published: <%= listing.published? %></p>
     </div>
-    <div class="small-3 columns panel listing-list-panel">
-      <p class="centered-text"><%= link_to 'Edit', edit_listing_path(listing) %></p>
+    <div class="small-4 columns listing-list-panel">
+      <p class="centered-text"><%= link_to 'Edit', edit_listing_path(listing), :class => "button bon-button tiny home-listing-button" %></p>
       <hr class="nav-hr" />
-      <p class="centered-text"><%= link_to 'Delete', remove_listing_path(listing), method: :patch, data: { confirm: 'Are you sure you want to remove this listing?' } %></p>
+      <p class="centered-text"><%= link_to 'Remove', remove_listing_path(listing), :class => " button bon-button home-listing-button tiny remove-button", method: :patch, data: { confirm: 'Are you sure you want to remove this listing?' } %></p>
     </div>
   </div>
   <hr />
