--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -1,7 +1,12 @@
-.messages {
+.fi-trash {
+  color: #246020;
+  font-size: large;
+}
 
-  .reply-button {
-    padding: 7px;
-  }
+.reply-button {
+  padding: 7px;
+}
 
+.trash-link {
+  margin-left: 20px;
 }
