--- a/app/assets/stylesheets/_offers.scss
+++ b/app/assets/stylesheets/_offers.scss
@@ -1,7 +1,8 @@
-.offers {
+.offers-page-button {
+  padding: 5px 10px;
+  width: 45%;
+}
 
-  .offers-page-button {
-    padding: 5px 10px;
-    width: 45%;
-  }
+.offer-block {
+  padding-bottom: 10px;
 }
