--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,204 +9,6 @@
 @import "static_pages";
 @import "offers";
 @import "foundation-icons";
-
-.no-padding {
-  padding: 0;
-}
-
-.no-margin {
-  margin: 0;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.top-margin {
-  margin-top: 20px;
-}
-
-.notification {
-  color: #2ECC40;
-}
-
-.no-listing-message-margin {
-  margin-bottom: 15px;
-}
-
-.product-search-button {
-  padding-right: 5px;
-  padding-left: 5px;
-  margin-bottom: 0;
-}
-
-.bon-button {
-  background-color: #e1e1e1;
-  border: 1px solid #b6b6b6;
-  color: #071307;
-}
-
-.bon-button:hover {
-  background-color: #246020;
-}
-
-.home-listing-button {
-  margin-bottom: 0;
-}
-
-.remove-button {
-  padding-left: 10px !important;
-  padding-right: 10px !important;
-}
-
-.listing-list-panel {
-  padding: 10px;
-}
-
-.marketplace-nav-title {
-  font-size: large;
-}
-
-.nav-hr {
-  margin: 10px 0;
-}
-
-.message-block {
-  padding-left: 0px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-}
-
-.message-date {
-  color: #737373;
-  font-size: smaller;
-  margin-top: 0;
-}
-
-.message-name {
-  margin-top: 0;
-}
-
-.listing-thumb {
-  max-width: 80px;
-  padding-right: 0;
-}
-
-.message-pic {
-  max-width: 80px;
-}
-
-.search-box {
-  padding-right: 0;
-}
-
-.listing-title {
-  min-height: 108px;
-}
-
-.fi-info {
-  color: gray;
-  font-size: 20px;
-}
-
-.fi-info-hover {
-  color: green;
-}
-
-.inline-label {
-  display: inline;
-  margin-right: 10px;
-}
-
-#mobile-icon-bar {
-  z-index: 1000;
-}
-
-.no-messages {
-  font-size: larger;
-  padding-bottom: 20px;
-}
-
-.trash-link {
-  margin-left: 20px;
-}
-
-.fi-trash {
-  color: #246020;
-  font-size: large;
-}
-
-.listing-panel-link {
-  margin: 0;
-  padding: 5px;
-}
-
-@media only screen and (min-width: 40.063em)  {
-  .seller-info-box {
-    margin-top: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-}
-
-.seller-button {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  margin-top: 5px;
-  margin-bottom: 0;
-}
-
-.listing-pic-main {
-  margin-bottom: 20px;
-}
-
-#listing-pic-main-row {
-  img.th:hover, img.th:focus {
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.preview-pic-row {
-  margin-bottom: 15px;
-}
-
-.offer-block {
-  padding-bottom: 10px;
-}
-
-#notice {
-  color: green;
-}
-
-#alert {
-  color: red;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-}
-
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
-  }
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
-}
+@import "home";
+@import "listing";
+@import "shared_styles";
