--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body class="<%= controller.controller_name %>">
+  <body>
 
     <%= render partial: "topbar" %>
     <%= render partial: "hero" %>
