--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -2,7 +2,7 @@
   <div class="small-12 medium-4 columns">
     <%= render partial: "shared/home_nav" %>
   </div>
-  <div class="small-12 medium-7 large-8 columns">
+  <div class="small-12 medium-8 columns">
     <h4><%= @messages.first.subject %></h4>
     <hr />
     <div id="message-box" class="row">
