--- a/app/views/offers/sent.html.erb
+++ b/app/views/offers/sent.html.erb
@@ -2,7 +2,7 @@
   <div class="small-12 medium-4 columns">
     <%= render partial: "shared/home_nav" %>
   </div>
-  <div class="small-12 medium-7 large-8 columns">
+  <div class="small-12 medium-8 columns">
     <div class="row">
       <div class="small-12 columns panel">
         <h4>Sent Offers</h4>
