--- a/app/views/shared/_marketplace_nav.html.erb
+++ b/app/views/shared/_marketplace_nav.html.erb
@@ -1,6 +1,11 @@
-<label class="marketplace-nav-title"><%= link_to_unless_current 'All Listings', marketplace_or_listings %></label>
-<hr class="nav-hr" />
-Categories
-<ul>
+<label class="marketplace-nav-title">
+<% if all_listings? %>
+  <em>Categories</em>
+<% else %>
+  <%= link_to "<em>Categories</em> - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings, :class => '' %>
+<% end %>
+</label>
+<hr class="marketplace-nav-hr" />
+<ul class="marketplace-nav-ul">
   <%= render partial: @categories %>
 </ul>
