--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,25 @@
-<div class="row">
-  <div class="small-12 medium-4 columns panel">
+<div class="row" data-equalizer>
+  <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Buy</h3>
+    <hr class="nav-hr" />
     <p>Check out cool stuff people have to sale</p>
   </div>
-  <div class="small-12 medium-4 columns panel">
+  <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Sell</h3>
+    <hr class="nav-hr" />
     <p>Put some cool stuff you have up for sale</p>
   </div>
-  <div class="small-12 medium-4 columns panel">
+  <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Connect</h3>
+    <hr class="nav-hr" />
     <p>Find cool people that are into cool stuff</p>
+  </div>
+</div>
+<div class="row">
+  <div class="small-5 columns">
+    <label><p class="get-started">Get started!</p></label>
+  </div>
+  <div class="small-7 columns">
+    <%= link_to "Sign Up!", new_user_registration_path, :class => "button" %>
   </div>
 </div>
