Add font color to marketplace nav title

--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -88,6 +88,7 @@ a.nav-link li, .marketplace-nav-title {
 }
 
 .marketplace-nav-title, .marketplace-nav-title a{
+  color: #111;
   font-size: large;
   padding-top: 0px;
   padding-left: 0px;
