--- a/app/views/shared/_category_accordion_mobile.html.erb
+++ b/app/views/shared/_category_accordion_mobile.html.erb
@@ -6,10 +6,13 @@
         <div class="panel">
           <ul>
             <label class="marketplace-nav-title">
-              <em>Categories</em>
-              <%= " - #{ link_to 'Show All', marketplace_or_listings, :class => 'marketplace-show-all' }".html_safe unless all_listings? %>
+              <% if all_listings? %>
+                <em>Categories</em>
+              <% else %>
+                <%= link_to "<em>Categories</em> - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings %>
+              <% end %>
             </label>
-            <ul>
+            <ul class="marketplace-nav-ul">
               <%= render partial: @categories %>
             </ul>
           </ul>
