--- a/app/views/shared/_marketplace_nav.html.erb
+++ b/app/views/shared/_marketplace_nav.html.erb
@@ -2,7 +2,7 @@
 <% if all_listings? %>
   <em>Categories</em>
 <% else %>
-  <%= link_to "<em>Categories</em> - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings, :class => '' %>
+  <%= link_to "<em>Categories</em> - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings %>
 <% end %>
 </label>
 <hr class="marketplace-nav-hr" />
