Change copy on landing page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,17 +2,17 @@
   <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Buy</h3>
     <hr class="nav-hr" />
-    <p>Check out cool stuff people have to sale</p>
+    <p class="centered-text">Browse the bonsai list marketplace.</p>
   </div>
   <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Sell</h3>
     <hr class="nav-hr" />
-    <p>Put some cool stuff you have up for sale</p>
+    <p class="centered-text">Post bonsai goods you want to sell.</p>
   </div>
   <div class="small-12 medium-4 columns panel" data-equalizer-watch>
     <h3 class="centered-text">Connect</h3>
     <hr class="nav-hr" />
-    <p>Find cool people that are into cool stuff</p>
+    <p class="centered-text">Find other bonsai enthusiasts near you.</p>
   </div>
 </div>
 <div class="row">
