Add radius class to sign up button

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,6 +20,6 @@
     <label><p class="get-started">Get started!</p></label>
   </div>
   <div class="small-7 columns">
-    <%= link_to "Sign Up!", new_user_registration_path, :class => "button" %>
+    <%= link_to "Sign Up!", new_user_registration_path, :class => "button radius" %>
   </div>
 </div>
