--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="small-12 columns">
       <ul id="footer-links" class="inline-list">
-        <li><%= link_to "About" %></li>
-        <li><%= link_to "Contact" %></li>
-        <li><%= link_to "FAQ" %></li>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contact", contact_path %></li>
+        <li><%= link_to "FAQ", faq_path %></li>
       </ul>
     </div>
   </div>
