--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-12 medium-5 columns">
     <h2>Change your password</h2>
 
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
@@ -15,5 +15,5 @@
       <div><%= f.submit "Change my password" %></div>
     <% end %>
   </div>
-</div>  
+</div>
 <%= render "users/shared/links" %>
