--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 columns">    
+  <div class="small-12 medium-5 columns">
     <h2>Forgot your password?</h2>
 
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
@@ -8,7 +8,7 @@
       <div><%= f.label :email %><br />
       <%= f.email_field :email, :autofocus => true %></div>
 
-      <div><%= f.submit "Send me reset password instructions" %></div>
+      <div><%= f.submit "Send me reset password instructions", :class => "button tiny" %></div>
     <% end %>
   </div>
 </div>
