--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-12 medium-5 columns">
     <h2>Resend unlock instructions</h2>
 
     <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
@@ -10,6 +10,6 @@
 
       <div><%= f.submit "Resend unlock instructions" %></div>
     <% end %>
-  </div>  
+  </div>
 </div>
 <%= render "users/shared/links" %>
