Use close rather than close.fndtn.reveal for close modal click events

--- a/app/assets/javascripts/listings.js.erb
+++ b/app/assets/javascripts/listings.js.erb
@@ -1,6 +1,6 @@
 $(function(){
   $('.listing-close-reveal-modal').on('click', function (){
-    $('#interestedModal').foundation('reveal', 'close.fndtn.reveal');
+    $('#interestedModal').foundation('reveal', 'close');
   });
 
   $('.fi-info').hover(function (){
