--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -1,6 +1,6 @@
 $(function(){
   $('.message-close-reveal-modal').on('click', function (){
-    $('#sendMessageModal').foundation('reveal', 'close.fndtn.reveal');
+    $('#sendMessageModal').foundation('reveal', 'close');
   });
 
   function searchFliterSort (){
