--- a/app/views/shared/_marketplace_nav.html.erb
+++ b/app/views/shared/_marketplace_nav.html.erb
@@ -1,11 +1,13 @@
-<label class="marketplace-nav-title">
-<% if all_listings? %>
-  <em>Categories</em>
-<% else %>
-  <%= link_to "<em>Categories</em> - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings %>
-<% end %>
-</label>
-<hr class="marketplace-nav-hr" />
-<ul class="marketplace-nav-ul">
-  <%= render partial: @categories %>
-</ul>
+<div class="panel no-padding">
+  <label class="marketplace-nav-title">
+  <% if all_listings? %>
+    Categories
+  <% else %>
+    <%= link_to "Categories - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings %>
+  <% end %>
+  </label>
+  <hr class="marketplace-nav-hr" />
+  <ul class="marketplace-nav-ul">
+    <%= render partial: @categories %>
+  </ul>
+</div>
