--- a/app/views/application/_icon_bar.html.erb
+++ b/app/views/application/_icon_bar.html.erb
@@ -1,7 +1,7 @@
 <div id="mobile-icon-bar" class="icon-bar four-up show-for-small-only">
 
   <%= link_to "<i class='fi-home'></i><label>Home</label>".html_safe, user_root_path, :class => "item" %>
-  <%= link_to "<i class='fi-price-tag'></i>".html_safe, listings_path, :class => "item" %>
+  <%= link_to "<i class='fi-price-tag'></i>".html_safe, user_marketplace_path(current_user), :class => "item" %>
   <%= link_to "<i class='fi-mail'></i>".html_safe, messages_path, :class => "item" %>
   <%= link_to "<i class='fi-wrench'></i>".html_safe, edit_user_registration_path, :class => "item" %>
   <%#= link_to "<span></span>".html_safe, user_root_path, :class => "right-off-canvas-toggle item menu-icon" %>
