--- a/app/views/application/_mobile_home_links.html.erb
+++ b/app/views/application/_mobile_home_links.html.erb
@@ -2,7 +2,7 @@
   <%= link_to "<i class='fi-home'></i> Home".html_safe, user_root_path %>
 </li>
 <li class="hide-for-medium-up">
-  <%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, listings_path %>
+  <%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, user_marketplace_path(current_user) %>
 </li>
 <li class="hide-for-medium-up has-dropdown">
   <%= link_to "<i class='fi-burst-sale #{'notification' if new_offers?}'></i> Offers".html_safe, offers_path %>
