--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -83,14 +83,14 @@ a.nav-link h5:hover {
   padding-right: 20px;
 }
 
-a.nav-link li, .marketplace-nav-title {
+a.nav-link li {
   background-color: #f2f2f2;
   border-bottom: 1px solid #d8d8d8;
   color: #111;
   font-size: 1em;
   line-height: 1.625em;
   padding-bottom: 12px;
-  padding-left: 30px;
+  padding-left: 35px;
   padding-right: 12px;
   padding-top: 12px;
 }
@@ -99,6 +99,7 @@ a.nav-link li, .marketplace-nav-title {
   background-color: #246020;
   color: white;
   padding: 12px;
+  padding-left: 20px;
   border: 1px solid #262626;
   width: 100%;
 }
