Remove bottom border from image

--- a/app/assets/stylesheets/_listing.scss
+++ b/app/assets/stylesheets/_listing.scss
@@ -22,5 +22,7 @@
 }
 
 a img.listing-image {
-  border: 1px solid #d8d8d8;
+  border-top: 1px solid #d8d8d8;
+  border-right: 1px solid #d8d8d8;
+  border-left: 1px solid #d8d8d8;
 }
