--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -35,6 +35,10 @@ p {
   color: green;
 }
 
+a.home-link {
+  padding-left: 20px !important;
+}
+
 .listing-thumb {
   max-width: 80px;
   padding-right: 0;
