Remove bottom padding on offers

--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -72,6 +72,12 @@ a.home-link {
   margin: 10px 0;
 }
 
+.offers-block {
+  padding-left: 0px;
+  padding-right: 10px;
+  padding-bottom: 0px;
+}
+
 a.nav-link h5 {
   color: #707070;
   text-shadow: 2px black, 2px black;
